--- a/Home17/Home17/Views/Shared/_Layout.cshtml
+++ b/Home17/Home17/Views/Shared/_Layout.cshtml
@@ -25,6 +25,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Fish" asp-action="DataTransportByViewBag">DataTransportByViewBag</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Fish" asp-action="DataTransportByViewData">DataTransportByViewData</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Fish" asp-action="DataTransportByModel">DataTransportByModel</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Fish" asp-action="ViewWithSeparateLayout">ViewWithSeparateLayout</a>
+                        </li>
                     </ul>
                 </div>
             </div>
